# dataset_grouper

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: pytest_and_autopublish.yml  run_pytest.yml  test_package.yml
dataset_grouper/: MANIFEST.in  __init__.py  beam_transforms.py  beam_transforms_test.py  count_utils.py  count_utils_test.py  data_loaders.py  data_loaders_test.py  integration_test.py  serialization.py  serialization_test.py  test_utils.py  tf_utils.py  tf_utils_test.py  tfds_pipelines.py
dataset_grouper/_src/: beam_transforms.py  beam_transforms_test.py  count_utils.py  count_utils_test.py  data_loaders.py  integration_test.py  serialization.py  serialization_test.py  tf_utils.py  tf_utils_test.py  tfds_pipelines.py
dataset_grouper/core/: beam_transforms.py  beam_transforms_test.py  count_utils.py  count_utils_test.py  data_loaders.py  integration_test.py  serialization.py  serialization_test.py  tf_utils.py  tf_utils_test.py  tfds_pipelines.py  types.py
dataset_grouper/examples/datasets/: README.md  group_by_dirichlet_process.py
dataset_grouper/examples/training/: README.md  jax_fed_algs.py  model_utils.py  train_jax.py  train_tff.py
examples/: README.md
examples/datasets/: README.md  group_by_dirichlet_process.py  group_by_feature.py  group_c4.py  group_randomly.py
examples/training/: dataset_utils.py  train_jax.py  train_tff.py
tools/: build_package.sh  publish_package.sh
