[project]
# Project metadata. Available keys are documented at:
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata
name = 'dataset_grouper'
description = 'Dataset Grouper - A library for datasets with group-level structure.'
readme = 'README.md'
requires-python = '>=3.10'
license = {file = 'LICENSE'}
authors = [{name = 'Dataset Grouper Team', email='dataset-grouper-dev@google.com'}]
classifiers = [  # List of https://pypi.org/classifiers/
    'License :: OSI Approved :: Apache Software License',
    'Intended Audience :: Science/Research',
]
keywords = ['federated learning', 'datasets', 'machine learning']

# pip dependencies of the project
# Installed locally with `pip install -e .`
dependencies = [
  'apache-beam>=2.47.0',
  'numpy~=1.21',
  'tensorflow~=2.12.0',
  'tensorflow-datasets~=4.9.0',
]

dynamic = ['version']

[build-system]
# PEP 508 specs
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project.urls]
homepage = 'https://github.com/google-research/dataset_grouper'
repository = 'https://github.com/google-research/dataset_grouper'
changelog = 'https://github.com/google-research/dataset_grouper/blob/main/CHANGELOG.md'

[tool.setuptools.dynamic]
version = {attr = "dataset_grouper.__version__"}
