[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'dataset_grouper'
description = 'Dataset Grouper - A library for datasets with group-level structure.'
readme = 'README.md'
requires-python = '>=3.10'
license = {file = 'LICENSE'}
authors = [{name = 'Dataset Grouper Team', email='dataset-grouper-dev@google.com'}]
classifiers = [
    'License :: OSI Approved :: Apache Software License',
    'Intended Audience :: Science/Research',
]
keywords = ['federated learning', 'datasets', 'machine learning']
dependencies = [
  'apache-beam>=2.47.0',
  'numpy~=1.21',
  'tensorflow~=2.12.0',
  'tensorflow-datasets~=4.9.0',
]
dynamic = ['version']

[project.urls]
Homepage = 'https://github.com/google-research/dataset_grouper'
Repository = 'https://github.com/google-research/dataset_grouper'
Changelog = 'https://github.com/google-research/dataset_grouper/blob/main/CHANGELOG.md'

[tool.setuptools.dynamic]
version = {attr = "dataset_grouper.__version__"}
